--- a/views/post.ejs
+++ b/views/post.ejs
@@ -2,6 +2,8 @@
 <form action="/posts/<%=id%>/delete" method="POST">
   <h1><%=title%></h1>
   <p><%=content%></p>
-  <button type="submit" name ="button" class="btn btn-danger">Delete Post</button>
+  <button type="submit" name="button" class="btn btn-danger">
+    Delete Post
+  </button>
 </form>
 <%- include("partials/footer"); -%>
